--- a/ow/music.html
+++ b/ow/music.html
@@ -8,23 +8,23 @@
 <body background="素材/moon.jpeg">
     <h1 style="rainbow">音乐播放</h1>
     <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
     <p>海德薇变奏曲</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/Hedwig Theme.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/Hedwig Theme.mp3"></audio>
     <p>花之舞</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/flower dance.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/flower dance.mp3"></audio>
     <p>冬の花</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/冬の花.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/冬の花.mp3"></audio>
     <p>fade</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/Fade.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/Fade.mp3"></audio>
     <!--
     <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
     <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
     <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio><br>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
     <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio><br>-->
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>-->
 </body>
 </html>
