--- a/ow/music.html
+++ b/ow/music.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>音乐</title>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="../style.css"/>
 </head>
 <body background="素材/moon.jpeg">
     <h1 class="rainbow">音乐播放</h1>
     <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/grasswalk.mp3"></audio>
     <p>海德薇变奏曲</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/Hedwig Theme.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/Hedwig Theme.mp3"></audio>
     <p>花之舞</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/flower dance.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/flower dance.mp3"></audio>
     <p>冬の花</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/冬の花.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/冬の花.mp3"></audio>
     <p>fade</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/Fade.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/Fade.mp3"></audio>
     <!--
-    <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
-    <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
-    <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
-    <p>grasswalk</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>-->
+    <p></p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
+    <p></p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
+    <p></p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
+    <p></p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>-->
 </body>
 </html>
