--- a/ow/music.html
+++ b/ow/music.html
@@ -5,7 +5,7 @@
     <title>音乐</title>
     <link type="text/css" rel="stylesheet" href="../style.css"/>
 </head>
-<body background="素材/moon.jpeg">
+<body background="../素材/moon.jpeg">
     <h1 class="rainbow">音乐播放</h1>
     <p>grasswalk</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/grasswalk.mp3"></audio>
