--- a/ow/music.html
+++ b/ow/music.html
@@ -15,7 +15,7 @@
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/flower dance.mp3"></audio>
     <p>冬の花</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/冬の花.mp3"></audio>
-    <p>fade</p>
+    <p class="rainbow">fade</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/Fade.mp3"></audio>
     <!--
     <p></p>
