--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
+    <audio loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
         <!--导入各种乱七八糟的东西-->
     <head>
         <meta charset="UTf-8">
@@ -27,7 +27,7 @@
             <p>请证明△ABC与△CBA互为全等三角形</p>
             <p>需要吗？</p>
             <div>
-                <video width="420" height="340" controls>
+                <video width="420" height="340" preload="auto" controls>
                     <source src="素材/魔法.MOV">
                 </video>
             </div>
