--- a/ow/music.html
+++ b/ow/music.html
@@ -17,9 +17,9 @@
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/冬の花.mp3"></audio>
     <p class="rainbow">fade</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/Fade.mp3"></audio>
+    <p>照我以火</p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/照我以火.mp3"></audio>
     <!--
-    <p></p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
     <p></p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
     <p></p>
