--- a/ow/music.html
+++ b/ow/music.html
@@ -6,7 +6,8 @@
     <link type="text/css" rel="stylesheet" href="../style.css"/>
 </head>
 <body background="../素材/moon.jpeg">
-    <h1 class="rainbow">音乐播放</h1>
+    <h1 class="rainbow">音乐播放</h1><br/>
+    <h2 class="rainbow">没加载出来就等一小会</h2>
     <p>grasswalk</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/grasswalk.mp3"></audio>
     <p>海德薇变奏曲</p>
