--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </div>
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
             <p>йسحقθ<br></p>
+            <img src="素材/everythingisimportant.jpeg" alt="全是重点" width="1200" height="1200">
             <div>快到尾了</div>
             <h3>84</h3>
         </div>
