--- a/ow/xmas.html
+++ b/ow/xmas.html
@@ -6,7 +6,7 @@
 </head>
 <body background="../素材/圣诞节.jpg">
 <div>
-    <strong><h1 class="rainbow">Merry Christmas!</h1></strong>
+    <strong><h1 class="rainbow">Happy Christmas!</h1></strong>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/jingle bell.mp3"></audio>
     </div>
     <br/>
