--- a/ow/music.html
+++ b/ow/music.html
@@ -20,11 +20,11 @@
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/Fade.mp3"></audio>
     <p>照我以火</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/照我以火.mp3"></audio>
+    <p>can can</p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/can can.mp3"></audio>
+    <p>Windy Hill</p>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/Windy hill.mp3"></audio>
     <!--
-    <p></p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
-    <p></p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>
     <p></p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/.mp3"></audio>-->
 </body>
