--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/grasswalk.mp3"></audio>
         <!--导入各种乱七八糟的东西-->
     <head>
         <meta charset="UTf-8">
         <!--<script> src="script.js" ></script>-->
     </head>
-    <body background="素材/moon.jpeg">
+    <body background="素材/图片/moon.jpeg">
         <div>
             <p class="rainbow">欢迎！这里没有什么</p>
             <p>哈哈</p>
@@ -27,12 +27,12 @@
             <p>需要吗？</p>
             <div>
                 <video width="420" height="340" controls>
-                    <source src="素材/魔法.MOV">
+                    <source src="素材/视频/魔法.MOV">
                 </video>
             </div>
-            <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
+            <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/图片/雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
             <p>йسحقθ<br></p>
-            <img src="素材/everythingisimportant.jpg" alt="全是重点" width="1200" height="1200">
+            <img src="素材/图片/everythingisimportant.jpg" alt="全是重点" width="1200" height="1200">
             <div>快到尾了</div>
             <h3>84</h3>
         </div>
