--- a/le.html
+++ b/le.html
@@ -5,9 +5,9 @@
         <meta charset="GBK">
 	    <title>中转站</title>
     </head>
-<body background="素材/moon.jpeg">
+<body background="素材/图片/moon.jpeg">
 	<div>
-		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/flower dance.mp3"></audio>
+		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/flower dance.mp3"></audio>
 	    <a href="https://www.baidu.com">百度</a><br/>
 	</div>
 	<div>
