--- a/ow/xmas.html
+++ b/ow/xmas.html
@@ -4,10 +4,10 @@
     <meta charset="GBK">
     <link type="text/css" rel="stylesheet" href="../style.css">
 </head>
-<body background="../素材/圣诞节.jpg">
+<body background="../素材/图片/圣诞节.jpg">
 <div>
     <strong><h1 class="rainbow">Happy Christmas!</h1></strong>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/jingle bell.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/jingle bell.mp3"></audio>
     </div>
     <br/>
     <a href="https://zho-b.github.io/starting">回到主页</a>
