--- a/ow/ch-w.html
+++ b/ow/ch-w.html
@@ -4,6 +4,7 @@
     <meta charset="GBK">
     <title>语文文言文</title>
     <link type="text/css" rel="stylesheet" href="../style-ch.css"/>
+    <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 </head>
 <body>
     <div>
