--- a/ow/music.html
+++ b/ow/music.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>音乐</title>
     <link type="text/css" rel="stylesheet" href="../style.css"/>
+    <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 </head>
 <body background="../素材/图片/红云.jpg">
     <h1 class="rainbow">音乐播放</h1><br/>
