--- a/ow/storm.html
+++ b/ow/storm.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 <title>哈哈</title>
 
 <style>
