--- a/ow/xmas.html
+++ b/ow/xmas.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="GBK">
     <link type="text/css" rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
+    <!--非12/24日与12/25日不接入le.html-->
 </head>
 <body background="../素材/图片/圣诞节.jpg">
 <div>
