--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <link rel="icon" type="image/x-icon" href="素材/图片/皱眉.ico" />
+    <link rel="icon" type="image/x-icon" href="素材/图片/皱眉.jpg" />
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/grasswalk.mp3"></audio>
         <!--导入各种乱七八糟的东西-->
     <head>
