--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3>84</h3>
         </div>
         <div>
-            <a href="https://zho-b.github.io/starting/le.html">中转站</a>
+            <a href="le.html">中转站</a>
         </div>
         <div>哈哈，到尾了</div>
     </body>
