--- a/le.html
+++ b/le.html
@@ -18,13 +18,13 @@
 	    <a href="https://zho-b.github.io/starting">主页</a><br/>
 	</div>
 	<div>
-		<a href="https://zho-b.github.io/starting/ow/storm.html">好看</a><br/>
+		<a href="ow/storm.html">好看</a><br/>
 	</div>
 	<div>
-		<a href="https://zho-b.github.io/starting/ow/ch-w.html">语文文言文</a><br/>
+		<a href="ow/ch-w.html">语文文言文</a><br/>
 	</div>
 	<div>
-		<a href="https://zho-b.github.io/starting/ow/music.html">音乐播放</a><br/>
+		<a href="ow/music.html">音乐播放</a><br/>
 	</div>
 	<!--<div>
 	      <strong><a href="https://zho-b.github.io/starting/ow/xmas.html">圣诞节快乐<a/><br/><strong>
