--- a/ow/xmas.html
+++ b/ow/xmas.html
@@ -12,6 +12,6 @@
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/jingle bell.mp3"></audio>
     </div>
     <br/>
-    <a href="https://zho-b.github.io/starting">回到主页</a>
+    <a href="../index.html">回到主页</a>
     </body>
 </html>
