--- a/le.html
+++ b/le.html
@@ -15,7 +15,7 @@
 	    <a href="https://www.bilibili.com">哔哩哔哩</a><br/>
 	</div>
 	<div>
-	    <a href="https://zho-b.github.io/starting">主页</a><br/>
+	    <a href="index.html">主页</a><br/>
 	</div>
 	<div>
 		<a href="ow/storm.html">好看</a><br/>
