--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div>
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
                     <div>
-                        <button><a href="https://zho-b.github.io/starting">刷新</a></button>
+                        <button><a href="index.html">刷新</a></button>
                     </div>
                 </div>
             </div>
