--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         
     <body background="素材/图片/moon.jpeg">
         <div>
-            <p class="rainbow">欢迎！这里没有什么</p>
-            <p>哈哈</p>
+            <p class="rainbow">欢迎！</p>
+            <p></p>
             <div>
                 <div>
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
@@ -28,8 +28,8 @@
                     </div>
                 </div>
             </div>
-            <p>请证明△ABC与△CBA互为全等三角形</p>
-            <p>需要吗？</p>
+            <p>证明△ABC与△CBA互为全等三角形</p>
+            <p></p>
             <div>
                 <video width="420" height="340" controls>
                     <source src="素材/视频/魔法.MOV">
@@ -47,4 +47,4 @@
         <div>哈哈，到尾了</div>
     </body>
 </html>
-<!--↖(^ω^)↗-->
+<!--？-->
