--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <p>证明△ABC与△CBA互为全等三角形</p>
+            <!--<p>证明△ABC与△CBA互为全等三角形</p>-->
             <p></p>
             <div>
                 <video width="420" height="340" controls>
