--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div>
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
                     <div>
-                        <div id="datetime"></div>
+                        <div class="rainbow" id="datetime"></div>
                         <button><a href="index.html">刷新</a></button>
                     </div>
                 </div>
