--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
     <!--基础设置-->
     <!--标题-->
-    <title>我的主页</title>
+    <title>My-w</title>
     <html lang="zh-CN">
     <link rel="icon" type="image/x-icon" href="素材/图片/皱眉.jpg" />
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/grasswalk.mp3"></audio>
