--- a/ow/storm.html
+++ b/ow/storm.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
-<title>哈哈</title>
-
+<title>-</title>
+<script>
+	alert("Not original");
+	</script>
 <style>
 html,body{
 	margin:0px;
