--- a/ow/music.html
+++ b/ow/music.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="../style.css"/>
     <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 </head>
-<body background="../素材/图片/红云.jpg">
+<body background="blue">
     <h1 class="rainbow">音乐播放</h1><br/>
     <h2 class="rainbow">没加载出来就等一会</h2>
 <div style="text-align:left">
