--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/grasswalk.mp3"></audio>
     <link href="style.css" rel="stylesheet" type="text/css">    
     <div>
-        <!--当前时间-->
+        <!--js获取时间-->
         <script>
         function getD1(){
             var date=new Date();
