--- a/le.html
+++ b/le.html
@@ -30,5 +30,5 @@
 	      <strong><a href="https://zho-b.github.io/starting/ow/xmas.html">圣诞节快乐<a/><br/><strong>
 	<div>-->
 	</body>
-	<div>暂时想不出来了</div>
+	<div></div>
 	</html>
