--- a/index.html
+++ b/index.html
@@ -37,8 +37,31 @@
             <p>йسحقθ<br></p>
             <img src="素材/图片/everythingisimportant.jpg" alt="源自网络" width="800" height="700">
             <a href="le.html">跳转</a>
-            <div>到头了</div>
             <script>src="script.js" type="text/javascript"</script>
+           <h3>留言板</h3>
+           <textarea></textarea>
+           <button>send</button>
+           <ul></ul>
+           <script>
+            var txt=document.querySelector("textarea");
+            var btn=document.querySelector("button");
+            var ul=document.querySelector("ul");
+            btn.onclick = function () {
+                if (txt.value=="") {
+                    alert("Type something!")
+                } else {
+                    var li=document.createElement("li");
+                    li.innerHTML=txt.value + "<a href='javascript:;'>删除</a>"
+                    txt.value="";
+                    ul.insertBefore(li,ul.children[0]);
+                    var as = document.querySelectorAll("a");
+                    for (var i = 0; i < as.length; i++) {
+                        as[i].onclick = function () {
+                        ul.removeChild(this.parentNode)
+                        }
+                    }
+                }
+            }</script>
         </div>
     </body>
 </html>
