--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
        <div> 
             <p class="rainbow">欢迎！</p>
             <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
-            <div class="rainbow" id="datetime"></div>        
-            <button><a href="index.html">刷新</a></button>
+            <div class="rainbow" id="datetime"></div>
           
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/图片/雪融容.jpg" alt="源自网络" width="500" height="500"></a>
             <p>йسحقθ<br></p>
@@ -39,21 +38,22 @@
             <a href="le.html">跳转</a>
             <script>src="script.js" type="text/javascript"</script>
            <h3>留言板</h3>
+           <h5>#Message function is partially prepared products#</h5>
            <textarea></textarea>
-           <button>send</button>
+           <button>Send</button>
            <ul></ul>
         </div>
            <script>
-            var txt=document.querySelector("textarea");
-            var btn=document.querySelector("button");
+            var text=document.querySelector("textarea");
+            var but=document.querySelector("button");
             var ul=document.querySelector("ul");
-            btn.onclick = function () {
-                if (txt.value=="") {
+            but.onclick = function () {
+                if (text.value=="") {
                     alert("Type something!")
                 } else {
                     var li=document.createElement("li");
-                    li.innerHTML=txt.value + "<a href='javascript:;'>删除</a>"
-                    txt.value="";
+                    li.innerHTML=txt.value + "<a href='javascript:;'>Delete</a>"
+                    text.value="";
                     ul.insertBefore(li,ul.children[0]);
                     var as = document.querySelectorAll("a");
                     for (var i = 0; i < as.length; i++) {
