--- a/le.html
+++ b/le.html
@@ -18,7 +18,7 @@
 	    <a href="index.html">主页</a><br/>
 	</div>
 	<div>
-		<a href="ow/storm.html">好看</a><br/>
+		<a href="ow/storm.html">不知道叫什么好</a><br/>
 	</div>
 	<div>
 		<a href="ow/ch-w.html">语文文言文</a><br/>
