--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     alert("Type something!")
                 } else {
                     var li=document.createElement("li");
-                    li.innerHTML=txt.value + "<a href='javascript:;'>Delete</a>"
+                    li.innerHTML=text.value + "<a href='javascript:;'>Delete</a>"
                     text.value="";
                     ul.insertBefore(li,ul.children[0]);
                     var as = document.querySelectorAll("a");
