--- a/le.html
+++ b/le.html
@@ -6,29 +6,19 @@
         <meta charset="GBK">
 	    <title>中转站</title>
     </head>
-<body background="素材/图片/moon.jpeg">
+<body background-color="orange">
 	<div>
 	    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/flower dance.mp3"></audio>
 	    <a href="https://www.baidu.com">百度</a><br/>
-	</div>
-	<div>
 	    <a href="https://www.bilibili.com">哔哩哔哩</a><br/>
-	</div>
-	<div>
 	    <a href="index.html">主页</a><br/>
-	</div>
-	<div>
-		<a href="ow/storm.html">不知道叫什么好</a><br/>
-	</div>
-	<div>
-		<a href="ow/ch-w.html">语文文言文</a><br/>
-	</div>
-	<div>
-		<a href="ow/music.html">音乐播放</a><br/>
-	</div>
-	<!--<div>
+	    <a href="ow/storm.html">不知道叫什么好</a><br/>
+	    <a href="ow/ch-w.html">语文文言文</a><br/>
+	    <a href="ow/music.html">音乐播放</a><br/>
+	    <a href="message.html">留信</a><br/>
+	
+	<!--<
 	      <strong><a href="https://zho-b.github.io/starting/ow/xmas.html">圣诞节快乐<a/><br/><strong>
-	<div>-->
+	-->
 	</body>
-	<div></div>
 	</html>
