--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <p>йسحقθ<br></p>
             <img src="素材/图片/everythingisimportant.jpg" alt="源自网络" width="800" height="700">
             <a href="le.html">跳转</a>
-           <script>src="script.js" type="text/javascript"</script>       
+           <script>src="script.js" type="text/javascript"</script>     
+        </div>
     </body>
 </html>
