--- a/message.html
+++ b/message.html
@@ -36,7 +36,7 @@
                     }
                 }
             }
-    alert("Enter the message first if you want to leave a message by Python.Type in 'a' to leave messages")//
+    alert("Enter the message first if you want to leave a message by Python.Type in 'a' to leave messages")
     </script>
     
             <p><br/>or<br/><br/></p>
