--- a/message.html
+++ b/message.html
@@ -5,7 +5,7 @@
   <head>
       <meta charset="UTF-8">
       <title>message</title>
-      <link href="style.css" rel="stylesheet" type="text/css">//引入
+      <link href="style.css" rel="stylesheet" type="text/css"><!--引入-->
       <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
       <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   </head>
@@ -36,7 +36,7 @@
                     }
                 }
             }
-    alert("Enter the message first if you want to leave a message by Python.Type in 'a' to leave messages")
+    alert("Enter your message first,then your name if you want to leave a message by Python.Type in 'a' to leave messages")
     </script>
     
             <p><br/>or<br/><br/></p>
