--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           
     <!--标题-->
     <div>
-        <title>Myj</title>
+        <title>main</title>
         <meta charset="UTf-8">
         <html lang="zh-CN">
             </div>   
