--- a/ow/music.html
+++ b/ow/music.html
@@ -22,7 +22,7 @@
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/冬の花.mp3"></audio>
     
     <p>fade</p>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/Fademp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/Fade.mp3"></audio>
     
     <p>湮灭诗歌</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/湮灭诗歌.mp3"></audio>
