--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         
     </head>
     <body onload=getD1() background-color="orange">
-       <div> 
+       <div>
+           <div class="newtons-cradle">
+           <div class="newtons-cradle__dot"></div>
+           <div class="newtons-cradle__dot"></div>
+           <div class="newtons-cradle__dot"></div>
+           <div class="newtons-cradle__dot"></div>
+      </div>
             <p class="rainbow">欢迎！<br/>welcome!</p>
             <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
             <div class="rainbow" id="datetime"></div>
