--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/图片/雪融容.jpg" alt="源自网络" width="500" height="500"></a>
             <p>йسحقθ<br></p>
             <img src="素材/图片/everythingisimportant.jpg" alt="源自网络" width="800" height="600">
-           <div>
-            <a href="le.html">Other</a>
-           </div>
+        <div>
+               <a href="./le.html">
+               <button data-text="Awesome" class="button">
+               <span class="actual-text">&nbsp;Other&nbsp;</span>
+               <span class="hover-text" aria-hidden="true">&nbsp;Other&nbsp;</span>
+               </button></a>
+        </div>
            <script>src="script.js" type="text/javascript"</script>     
         </div>
     </body>
