--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             document.getElementById("datetime").innerHTML =d1;
         }
         setInterval("getD1();",1000);
-        </script>  
+        //function Tim(){
+        //    document.write(Date());
+        //}
+        //setInterval("Tim();",1000);
+        </script>
         </div>
         
         
