--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         
     </head>
-    <body onload=getD1() background-color="orange">
+    <body onload=getD1() background="cool.png">
        <div>
            <div class="newtons-cradle">
            <div class="newtons-cradle__dot"></div>
