--- a/索引.html
+++ b/索引.html
@@ -30,7 +30,7 @@
         
         
     </head>
-    <body onload=getD1() background="cool.png">
+    <body onload=getD1() style="backimg">
        <div>
            <div class="newtons-cradle">
            <div class="newtons-cradle__dot"></div>
