--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         
     </head>
-    <body onload=getD1() style="backimg">
+    <body onload=getD1() class="backimg">
        <div>
            <div class="newtons-cradle">
            <div class="newtons-cradle__dot"></div>
