--- a/le.html
+++ b/le.html
@@ -6,7 +6,7 @@
         <meta charset="GBK">
 	    <title>中转站</title>
     </head>
-<body background-color="orange">
+<body class="backimg">
 	<div>
 	    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/flower dance.mp3"></audio>
 	    <a href="https://www.baidu.com">百度</a><br/>
