--- a/ow/music.html
+++ b/ow/music.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="../style.css"/>
     <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 </head>
-<body background="blue">
+<body class="backimg2">
     <h1 class="rainbow">音乐播放</h1><br/>
 <div style="text-align:left">
     <p>grasswalk</p>
