--- a/ow/music.html
+++ b/ow/music.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 </head>
 <body class="backimg2">
-    <h1 class="rainbow">音乐播放</h1><br/>
+    <h1 class="rainbow">音乐</h1><br/>
+    <h4 class="rainbow">以后有时间搞个自主查询音乐</h4><br/>
 <div style="text-align:left">
     <p>grasswalk</p>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="../素材/音乐/grasswalk.mp3"></audio>
