--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <div class="newtons-cradle__dot"></div></div>
             
             <h1 class="rainbow">欢迎！<br/>Hello!</h1>
-            <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
+            <!--<p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>-->
             <div class="rainbow" id="datetime"></div>
           
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/图片/雪融容.jpg" alt="源自网络" width="500" height="500"></a>
