--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="rainbow" id="datetime"></div>
           
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/图片/雪融容.jpg" alt="源自网络" width="500" height="500"></a>
-            <p>йسحقθ<br></p>
+           <!-- <p>йسحقθ<br></p>-->
             <img src="素材/图片/everythingisimportant.jpg" alt="源自网络" width="800" height="600">
         <div>
                <a href="./le.html">
