--- a/le.html
+++ b/le.html
@@ -8,12 +8,13 @@
     </head>
 <body class="backimg">
 	<div>
+		<h3 class="rainbow">有些功能还不完善，先这样吧</h3><br/>
 	    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/flower dance.mp3"></audio>
-	    <a style="background_color:black;" href="https://www.baidu.com">跳转至百度</a><br/>
-	    <!--<a style="background_color:black;" href="https://www.bilibili.com">哔哩哔哩</a><br/>-->
-	    <a style="background_color:black;" href="index.html">主页</a><br/>
-	    <a style="background_color:black;" href="ow/storm.html">风暴</a><br/>
-	    <a style="background_color:black;" href="ow/ch-w.html">语文文言文</a><br/>
+	    <a style="color:black;" href="https://www.baidu.com">跳转至百度</a><br/>
+	    <!--<a style="color:black;" href="https://www.bilibili.com">哔哩哔哩</a><br/>-->
+	    <a style="color:black;" href="index.html">主页</a><br/>
+	    <a style="color:black;" href="ow/storm.html">风暴</a><br/>
+	    <a style="color:black;" href="ow/ch-w.html">语文文言文</a><br/>
 	   <!-- <a style="background_color:black;" href="ow/music.html">音乐</a><br/>
 	    <a style="background_color:black;" href="message.html">留信</a><br/>-->
 	
