--- a/le.html
+++ b/le.html
@@ -15,8 +15,8 @@
 	    <a style="color:black;" href="index.html">主页</a><br/>
 	    <a style="color:black;" href="ow/storm.html">风暴</a><br/>
 	    <a style="color:black;" href="ow/ch-w.html">语文文言文</a><br/>
-	   <!-- <a style="background_color:black;" href="ow/music.html">音乐</a><br/>
-	    <a style="background_color:black;" href="message.html">留信</a><br/>-->
+	    <a style="background_color:black;" href="ow/music.html">音乐（歌单非常少，在修改）</a><br/>
+	    <!--<a style="background_color:black;" href="message.html">留信</a><br/>-->
 	
 	<!--<
 	      <strong><a href="https://zho-b.github.io/starting/ow/xmas.html">圣诞节快乐<a/><br/><strong>
