--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <html lang="zh-CN">
             </div>   
     <!--导入-->
-    <link rel="icon" type="image/x-icon" href="素材/图片/皱眉.jpg" />
+    <link rel="icon" type="image/x-icon" href="素材/图片/Gong.JPG" />
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/音乐/夜曲.mp3"></audio>
     <link href="style.css" rel="stylesheet" type="text/css">    
     <div>
