--- a/ow/storm.html
+++ b/ow/storm.html
@@ -4,9 +4,10 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="../素材/图片/皱眉.jpg" />
 <title>-</title>
+	<!--
 <script>
 	alert("Not original");
-	</script>
+	</script>-->
 <style>
 html,body{
 	margin:0px;
