--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            <div class="newtons-cradle__dot"></div>
                <div class="newtons-cradle__dot"></div></div>
             
-            <h1 class="rainbow">欢迎！<br/>Hello!</h1>
+            <h1 class="rainbow">啥都没有<br/>Hello!</h1>
             <!--<p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>-->
             <div class="rainbow" id="datetime"></div>
           
